--- a/Development/public/css/style.css
+++ b/Development/public/css/style.css
@@ -366,4 +366,53 @@ p mark{
 
 /*----- Responsive Style -----*/
 
+@media only screen and (max-width: 768px) {
 
+    #nav{
+        width : 100%;
+        padding-top: 4%;
+        padding-left: 0%;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        right: 0;
+    }
+
+    #logo {
+        background-size: 55px 50px;
+        width: 55px;
+        height: 50px;
+        margin-bottom: 0%;
+        margin-left: 7px;
+        margin-right: 20px;
+        float: left;
+    }
+
+    #nav label {
+        font-size: 14px;
+        margin-top: 10px;
+    }
+
+    .bookBox {
+        float: left;
+        width: 70px;
+        height: 40px;
+    }
+
+    .eyeLogo {
+        width: 22px;
+        height: 22px;
+        background-size: 22px 22px;
+    }
+
+    .bookSchema {
+        float: right;
+        width: 100%;
+    }
+
+    .bookDetails{
+        display: none;
+    }
+
+}
