--- a/Development/public/css/style.css
+++ b/Development/public/css/style.css
@@ -354,12 +354,17 @@ body{
     float: left;
 }
 
-p mark{
-    color: red;
+.posHighlight {
+    color: #6699cc;
     text-decoration: underline;
-    background-color: rgba(255, 255, 255, 0.0);
+    font-weight: bold;
 }
 
+.negHighlight {
+    color: #e84949;
+    text-decoration: underline;
+    font-weight: bold;
+}
 
 
 
