--- a/Development/public/css/style.css
+++ b/Development/public/css/style.css
@@ -37,10 +37,6 @@ body{
 	clear:both;
 }
 
-
-
-
-
 /*---- Header Style -----*/
 
 #header {
@@ -59,9 +55,6 @@ body{
 }
 
 
-
-
-
 /*----- Nav Style -----*/
 
 #nav{
@@ -76,7 +69,7 @@ body{
 }
 
 #logo {
-	background-image: url("../images/logo.png");
+	background-image: url("../images/new%20logo.png");
 	background-size: 75px 70px;
 	background-repeat: no-repeat;
 	width: 75px;
@@ -87,16 +80,16 @@ body{
 
 .bookBox {
     float: left;
-    width: 200px;
+    width: 110%;
     height: 60px;
 }
 
 .eyeLogo {
-    width: 35px;
-    height: 35px;
-    margin-top: 3px;
+    width: 20%;
+    height: 45%;
+    margin-top: 3%;
     background-image: url("../images/open eye icon.png");
-    background-size: 35px 35px;
+    background-size: 95%;
     float: left;
 }
 
@@ -104,8 +97,8 @@ body{
     float: left;
 	text-decoration: none;
 	color: #000;
-	width: 100px;
-	margin-top: 12px;
+	width: 60px;
+	margin-top: 6%;
     margin-left: 7px;
 }
 
@@ -127,9 +120,6 @@ body{
 	margin-top: 10px;
 	font-size: 14px;
 }
-
-
-
 
 
 /*----- Menu Style -----*/
@@ -163,7 +153,7 @@ body{
 }
 
 .graphLine {
-    width: 100%;
+    width: 125%;
     height: 44px;
     float: left;
 }
@@ -171,18 +161,6 @@ body{
 .hover {
     height: 100%;
     width: 100%;
-}
-
-.hoverName {
-    display: none;
-    height: 0px;
-    margin-left: 15px;
-    font-size: 10px;
-    color: #000;
-    text-decoration: none;
-    text-align: left;
-    margin-top: 30px;
-    float: left;
 }
 
 .graphLine:hover {
@@ -195,7 +173,7 @@ body{
     height: 70px;
     width: 100px;
     float: left;
-    margin: -9px;
+    margin: -7px;
 }
 
 .imgPattern {
@@ -203,8 +181,14 @@ body{
     height: 70px;
 }
 
-
-
+.hoverName {
+    position: relative;
+    top : 20px;
+    left : 15px;
+    font-size: 10px;
+    color: #000;
+    display: none;
+}
 
 
 /*----- Book Details Style -----*/
@@ -233,7 +217,6 @@ body{
 
 .bookDetails h2{
     padding: 3%;
-    margin-left: -7px;
     font-size: 16px;
     font-weight: 700;
     text-align: left;
@@ -281,6 +264,7 @@ body{
 }
 
 #headerBook h4{
+    font-size: 0.9vw;
     width: 36px;
     margin-left: 10px;
     display: inline-block;
@@ -345,14 +329,21 @@ body{
     border-bottom: 3px solid #d9d9d9;
 }
 
+.bookDetails h2{
+    padding: 3%;
+    font-size: 16px;
+    font-weight: 700;
+}
+
 #chapterTitle{
-    margin-left: -1px;
+    display: inline-block;
 }
 
 #contentChapter p{
     padding: 10px;
     float: left;
 }
+
 
 .posHighlight {
     color: #6699cc;
@@ -367,11 +358,19 @@ body{
 }
 
 
-
-
 /*----- Responsive Style -----*/
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1120px) {
+    a#selectedSortChap {
+        position: absolute;
+        left : 15%;
+        top:11.5%;
+    }
+
+    #chapterTitle{
+        margin-top: 12vh;
+        display: block;
+    }
 
     #nav{
         width : 100%;
@@ -385,24 +384,19 @@ body{
     }
 
     #logo {
+        position: absolute;
+        top : 5px;
+        left : 0px;
         background-size: 55px 50px;
         width: 55px;
         height: 50px;
-        margin-bottom: 0%;
         margin-left: 7px;
         margin-right: 20px;
         float: left;
     }
 
     #nav label {
-        font-size: 14px;
-        margin-top: 10px;
-    }
-
-    .bookBox {
-        float: left;
-        width: 70px;
-        height: 40px;
+        display: none;
     }
 
     .eyeLogo {
@@ -412,12 +406,45 @@ body{
     }
 
     .bookSchema {
-        float: right;
+        text-align: center;
+        display: block;
         width: 100%;
+    }
+
+    .graphLine {
+        width: 80%;
+        float: right;
+    }
+
+    .bookSchema h1 {
+        text-align: center;
+        left : 17%;
+    }
+
+    .titleBook3, .titleBook2{
+        display: none;
     }
 
     .bookDetails{
         display: none;
     }
 
+    .bookBox{
+        margin-top: 25px;
+        width : 100%;
+
+    }
+
+    .linkBook{
+        margin-top: 3.8%;
+    }
+
+}
+
+@media only screen and (max-width: 660px) {
+    a#selectedSortChap {
+        position: absolute;
+        left : 25%;
+        top : 16%;
+    }
 }
