--- a/Production/public/css/style.css
+++ b/Production/public/css/style.css
@@ -1,294 +1,1 @@
-*{
-	padding : 0 ;
-	margin : 0 ;
-}
-
-
-
-#selectedLink {
-    color: #1daa8f;
-}
-
-#selectedSort {
-	text-decoration: underline;
-}
-
-label {
-	font-weight: lighter;
-	color: #fff;
-	font-size: 13px;
-	margin-top: 60px;
-	display: block;
-}
-
-body{
-	background-color: #000;
-}
-
-#header{
-	width : inherit;
-	height: 20px;
-/*	border : 1px solid red;*/
-}
-
-#wrapper{
-/*    border : 1px solid red;*/
-	margin: 0px auto;
-/*	width: 98%;*/
-}
-
-#wrapper2{
-/*    width : 550px;*/
-/*    height : 480px;*/
-/*    border : 1px solid red;*/
-    padding : 1%;
-/*    border-bottom: 2px solid #c6c6c6;*/
-}
-
-#nav , #menu{
-	float: left;
-/*    border : 1px solid blue;*/
-}
-
-
-header{
-    padding : 1%;
-/*    border : 1px solid #f2d744;*/
-}
-
-
-graph , quote{
-    display: block;
-    width : 100%;
-    height : 140px;
-/*    border : 1px solid red;*/
-}
-
-
-.sort{
-    display: inline;
-    float: right;
-}
-
-.sort h4{
-    color : #fff;
-    display: inline;
-}
-
-.sort a{
-    text-decoration : underline;
-    color: #fff;
-}
-
-header h2, header h3{
-   padding: 2%;
-    display: inline;
-}
-
-header h3{
-    color : #cecece;
-}
-
-#nav{
-    padding-top: 3%;
-/*	border : 1px solid green;*/
-/*    padding-left : 5%;*/
-	width : 15%;
-}
-
-#nav a , #nav label , #nav #logo{
-    margin-left: 50px;
-}
-
-#logo {
-	background-image: url("../images/logo.png");
-	background-size: 53px 50px;
-	background-repeat: no-repeat;
-	width: 53px;
-	height: 50px;
-/*	border : 1px solid green;*/
-    margin-bottom: 22%;
-}
-
-#nav a{
-
-}
-
-.bookSchema {
-	float: left;
-	width: 18%;
-/*	height: inherit;*/
-}
-
-.descriptions{
-    float : left;
-    width : 45%;
-    height : 100vh;
-}
-
-.bookGraph1 , .bookGraph2 , .bookGraph3 {
-/*    border : 1px solid #c63333;*/
-    text-align: center;
-}
-
-graph svg{
-    position: absolute;
-    left:0;
-    -ms-transform: rotate(-90deg);
-    -webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    transform-origin: 50% 15% ;
-}
-
-graph > .bookGraph1{
-/*    bottom : 27.2%;*/
-/*    left : 26%;*/
-/*    position: absolute;*/
-/*    width : 23%;*/
-/*    border : 1px solid #e0e0e0;*/
-/*    text-align: center;*/
-    height : 200px;
-    position: relative;
-}
-
-quote h1, quote p{
-    padding : 2%;
-    font-size : 90%;
-}
-
-quote h1{
-    color : #fff;
-    margin-top: 60px;
-}
-
-quote p{
-    color : #fff;
-/*    border-bottom: 2px solid #dbd9d9;*/
-}
-
-.bookSchema h1, h2, h3 {
-/*    border: 1px solid #1ca551;*/
-    padding: 3%;
-    text-align: center;
-/*    margin: auto;*/
-    color: #fff;
-	font-weight: normal;
-	font-size: 15px;
-/*    padding: 13%;*/
-/*    text-align: center;*/
-}
-
-.bookDetail{
-    width : 100%;
-    height : 342px;
-    border-bottom: 2px solid #d9d9d9;
-}
-
-.bookDetail iframe{
-    border : none;
-    width : 100%;
-    height : 100%;
-}
-
-#menu {
-    width : 83%;
-/*    border : 1px solid white;*/
-}
-
-.linkMenu {
-	text-decoration: none;
-	color: #fff;
-	float: left;
-	width: 200px;
-	margin-top: 10px;
-    font-weight: 700;
-}
-
-.linkSort {
-	text-decoration: none;
-	color: #fff;
-	float: left;
-	width: 200px;
-	margin-top: 10px;
-	font-size: 13px;
-}
-
-.clear{
-	clear:both;
-}
-
-.tooltip:hover{
-    background-color: #fff;
-    color : #fff;
-/*    width : 20px;*/
-/*    height : 20px;*/
-    position: relative;
-    display: inline-block;
-/*    border-bottom: 1px dotted red;*/
-}
-
-/* Graph Style */
-rect{
-    cursor: pointer;
-    transition: 0.15s ease-in;
-}
-
-rect:hover{
-    fill : #bfbfbf;
-/*    border : 2px solid red;*/
-}
-
-
-.bar2 {
-    fill: #b72c2c;
-}
-
-.bar{
-    fill: #1daa8f;
-/*    width : 20%;*/
-/*    width : 30px;*/
-
-}
-
-
-
-.axis text {
-    font: 10px sans-serif;
-}
-
-.axis path, .axis line {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges;
-}
-
-.ch_no a{
-    z-index: 999;
-    text-decoration: none;
-    display: inline;
-    color: #fff;
-    cursor: pointer;
-}
-
-.ch_no a:hover{
-
-}
-
-
-.ch_no{
-    position: absolute;
-    margin-top : 20px;
-    z-index: 999;
-    cursor: pointer;
-    font-size:60%;
-    line-height: 3px;
-    width : 3px;
-    height : 3px;
-    color : #fff;
-    padding : 0.7%;
-    border-radius: 50px;
-}
-
-.ch_no:hover{
-    background-color: #c9c9c9;
-}
+#header,#wrapper,body{width:100%}#header,#nav{left:0;top:0}#headerBook a,.hoverName,.linkBook,.linkSort{text-decoration:none}.bookSchema h1,.hoverName{text-align:left;color:#000}#header,.bookDetails,.sortsOpt{position:fixed;z-index:1;right:0}#contentChapter,.bookDetails h1{border-bottom:3px solid #d9d9d9}*{font-family:Tinos;padding:0;margin:0}@font-face{font-family:Tinos;src:url(fonts/Tinos-Regular.woff)}@font-face{font-family:Tinos-Bold;src:url(fonts/Tinos-Bold.woff)}body{height:100%;background-image:url(../images/background.jpg)}#menu,#nav{height:100%;float:left}#wrapper{height:100%;margin:0 auto}#logo,.linkBook{margin-left:7px}.clear{clear:both}#header{height:9%;background:rgba(255,255,255,.5);background:-webkit-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0));background:-o-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0));background:-moz-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0));background:linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0))}#logo,.graphLine:hover{background-repeat:no-repeat}#nav{width:15%;padding-top:4%;padding-left:3%;position:fixed;z-index:1;bottom:0}#logo{background-image:url(../images/logo.png);background-size:75px 70px;width:75px;height:70px;margin-bottom:30%}.bookBox{float:left;width:200px;height:60px}.eyeLogo{width:35px;height:35px;margin-top:3px;background-image:url('../images/open eye icon.png');background-size:35px 35px;float:left}.linkBook{float:left;color:#000;width:100px;margin-top:12px}#nav .linkSort,#nav label{margin-left:5px}#nav label{font-weight:700;font-size:17px;margin-top:40px}.linkSort{color:#000;float:left;width:80px;margin-top:10px;font-size:14px}#menu{width:100%;padding-left:20%}.bookSchema,.bookSchema h1{width:31%;float:left}.bookSchema h1{padding-top:1%;margin-left:2%;font-size:15px;margin-top:4px;position:fixed;z-index:1;top:0}.titleBook3{padding-left:2%}.graphLine{width:100%;height:44px;float:left}.hover{height:100%;width:100%}.hoverName{display:none;height:0;margin-left:15px;font-size:10px;margin-top:30px;float:left}.graphLine:hover{background-image:url(../images/hover.png);background-size:180px 44px}.graphLine svg{height:70px;width:100px;float:left;margin:-9px}.imgPattern{width:110px;height:70px}.bookDetails{display:none;width:35%;top:0;bottom:0;padding:30px;background:rgba(128,128,128,.1);transition:.3s}.bookDetails h1{font-size:20px;font-weight:700;text-align:center;padding-bottom:15px;margin-top:5px}.bookDetails h2,.bookDetails h3{padding:3%;text-align:left;display:inline}.bookDetails h2{margin-left:-7px;font-size:16px;font-weight:700}.bookDetails h3{margin-left:-25px;font-size:14px;font-weight:500}.bookDetails h4{width:78px;font-size:12px;font-weight:500;margin-top:3px;display:inline-block;float:right;margin-right:20px}#closeX{width:6px;float:left;margin-left:-15px;margin-top:-1px}#headerBook{width:100%;height:10%}#headerBook a{width:90px;margin-left:10px;display:inline-block;float:right;color:#000}#headerBook h4{width:36px;margin-left:10px;display:inline-block;float:right}#selectedSort{text-decoration:underline}.sortsOpt{display:none;height:65px;width:96px;top:30;background-color:#e9eaea;transition:.5s;margin-right:52px}.sortsOpt a{text-decoration:none;color:#000;display:block;transition:.3s}.negHighlight,.posHighlight{text-decoration:underline;font-weight:700}#selectedSortChap{float:right;width:110px;margin-top:0;margin-right:-10px}#graphBook{width:100%;height:160px;display:block;float:center;margin-top:-30px}.chapterNum{width:15px;height:20px;font-size:11px;margin:0 0 3px -1px;color:#000;font-weight:700}#contentChapter{width:100%;height:54%;overflow:scroll;overflow-x:hidden}#chapterTitle{margin-left:-1px}#contentChapter p{padding:10px;float:left}.posHighlight{color:#69c}.negHighlight{color:#e84949}@media only screen and (max-width:768px){#nav{width:100%;padding-top:4%;padding-left:0;position:fixed;z-index:1;top:0;left:0;right:0}#logo{background-size:55px 50px;width:55px;height:50px;margin-bottom:0;margin-left:7px;margin-right:20px;float:left}#nav label{font-size:14px;margin-top:10px}.bookBox{float:left;width:70px;height:40px}.eyeLogo{width:22px;height:22px;background-size:22px 22px}.bookSchema{float:right;width:100%}.bookDetails{display:none}}
