--- a/Development/public/css/style.css
+++ b/Development/public/css/style.css
@@ -88,7 +88,7 @@ body{
     width: 20%;
     height: 45%;
     margin-top: 3%;
-    background-image: url("../images/open eye icon.png");
+    background-image: url("../images/open_eye_icon.png");
     background-size: 95%;
     float: left;
 }
