--- a/Development/public/css/style.css
+++ b/Development/public/css/style.css
@@ -20,6 +20,7 @@ body{
     height: 100%;
     width: 100%;
 	background-image: url("../images/background.jpg");
+    overflow-x: hidden;
 }
 
 #nav , #menu{
@@ -80,16 +81,16 @@ body{
 
 .bookBox {
     float: left;
-    width: 110%;
+    width: 100%;
     height: 60px;
 }
 
 .eyeLogo {
-    width: 20%;
+    width: 18%;
     height: 45%;
-    margin-top: 3%;
+    margin-top: 2%;
     background-image: url("../images/open_eye_icon.png");
-    background-size: 95%;
+    background-size: 85%;
     float: left;
 }
 
@@ -99,7 +100,7 @@ body{
 	color: #000;
 	width: 60px;
 	margin-top: 6%;
-    margin-left: 7px;
+    margin-left: -2px;
 }
 
 #nav .linkSort , #nav label{
