--- a/Development/public/css/style.css
+++ b/Development/public/css/style.css
@@ -128,6 +128,7 @@ body{
 /*----- Menu Style -----*/
 
 #menu {
+    transition: 0.2s ease-in;
     width : 100%;
     padding-left: 20%;
 }
@@ -197,16 +198,17 @@ body{
 /*----- Book Details Style -----*/
 
 .bookDetails{
-    display: none;
+    transition: 0.2s ease-in;
+/*    display: none;*/
     width : 35%;
     position: fixed;
     z-index: 1;
     top: 0;
-    right: 0;
+    right: -35%;
     bottom: 0;
     padding: 30px;
     background: rgba(128, 128, 128, 0.1);
-    transition: 0.3s;
+/*    transition: 0.3s;*/
 }
 
 .bookDetails h1{
@@ -376,7 +378,7 @@ body{
     }
 
     #nav{
-        width : 100%;
+        width : 20%;
         padding-top: 4%;
         padding-left: 0%;
         position: fixed;
@@ -428,10 +430,6 @@ body{
         display: none;
     }
 
-    .bookDetails{
-        display: none;
-    }
-
     .bookBox{
         margin-top: 25px;
         width : 100%;
@@ -441,6 +439,16 @@ body{
     .linkBook{
         margin-top: 3.8%;
     }
+
+    .hoverName {
+        position: relative;
+        top : 20px;
+        left : 25px;
+        font-size: 10px;
+        color: #000;
+        display: none;
+    }
+
 
 }
 
